archive/cluster/apps/external/fluidd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fluidd
  namespace: external
spec:
  ports:
    - port: 4800

---
apiVersion: v1
kind: Endpoints
metadata:
  name: fluidd
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.178.67
    ports:
      - port: 4800

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fluidd
  namespace: external
spec:
  ingressClassName: "nginx"
  rules:
    - host: "fluidd.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fluidd
                port:
                  number: 4800
