archive/cluster/apps/external/minio-ssd.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: s3-ssd
  namespace: external
spec:
  ports:
    - port: 9002

---
apiVersion: v1
kind: Endpoints
metadata:
  name: s3-ssd
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.178.40
    ports:
      - port: 9002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-ssd
  namespace: external
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      chunked_transfer_encoding off;
spec:
  ingressClassName: "nginx"
  rules:
    - host: "s3-ssd.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3-ssd
                port:
                  number: 9002

---
apiVersion: v1
kind: Service
metadata:
  name: minio-ssd
  namespace: external
spec:
  ports:
    - port: 9003

---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-ssd
  namespace: external
subsets:
  - addresses:
      - ip: 192.168.178.40
    ports:
      - port: 9003

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ssd
  namespace: external
spec:
  ingressClassName: "nginx"
  rules:
    - host: "minio-ssd.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-ssd
                port:
                  number: 9003
